[package]
name = "chatan-rs"
version = "0.1.0"
authors = ["modelflat"]
edition = "2018"

#[lib]
#name = "chatan"
#path = "src/chatan/mod.rs"

[dependencies]
indicatif = "0.11"
rayon = "1.1"
reqwest = "0.9"
scraper = "0.4"
humantime = "1.2"
chrono = { version = "0.4", features = ["serde"] }
jetscii = "0.4"
