[package]
name = "chatan-rs"
version = "1.0.0"
authors = ["modelflat"]
edition = "2018"

[lib]
name = "chatan"

[[bin]]
name = "rolling_top"
path = "jobs/rolling_top/main.rs"

[[bin]]
name = "top"
path = "jobs/top/main.rs"

[[bin]]
name = "emote_index"
path = "jobs/emote_index/main.rs"

[[bin]]
name = "discover_emotes"
path = "jobs/discover_emotes/main.rs"

[dependencies]
csv = "1.1"
indicatif = "0.11"
rayon = "1.1"
reqwest = "0.9"
scraper = "0.4"
humantime = "1.2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
counter = "0.4"
image = "0.22"
runtime-fmt = "0.3"
structopt = "0.2"
